Fixed broken layout for image resizing fields in other options page

--- a/products/photocrati_nextgen/modules/nextgen_other_options/static/nextgen_settings_page.css
+++ b/products/photocrati_nextgen/modules/nextgen_other_options/static/nextgen_settings_page.css
@@ -58,9 +58,9 @@
 	width: auto;
 }
 
-#image_width,
-#image_height{
-	width: 40px;
+#ngg_page_content .ngg_page_content_main #image_width,
+#ngg_page_content .ngg_page_content_main #image_height{
+	width: 53px;
 }
 
 #ngg_page_content #thumbnail_dimensions_width,
